<resources>
    <string name="app_name">My Ads</string>
    <string name="app_id" translatable="false">CPE6ZlvDNZsQeHhLOzoni6WechLXLRlQGDhcYQQO</string>
    <string name="client_key" translatable="false">WUN4r5JUXXvyn2ZGn1oZsSZ3tERbE0WQIcNtLyLZ</string>
    <string name="server" translatable="false">https://ads9000.herokuapp.com/parse</string>
    <string name="favorite_on_map">Favorite on map</string>
    <string name="clear">Clear</string>
    <string name="owner">Show owner</string>
    <string name="hello">Welcome to the mobile application of free advertisements!</string>
    <string name="apply_lic">Apply</string>
    <string name="payment_condition">Payment conditions</string>
    <string name="payment">By agreement</string>
    <string name="clear_fields">Clear fields</string>
    <string name="cost">Cost:</string>
    <string name="in_title">In title</string>
    <string name="in_description">In text</string>
    <string name="everywhere">Everywhere</string>
    <string name="where_to_search">Search:</string>
    <string name="any">Any</string>
    <string name="author">Author:</string>
    <string name="complain">Complain</string>
    <string name="complain_hint">Write to us about a problem</string>
    <string name="complain_block_hint">Block author</string>
    <string name="one_m">1 month</string>
    <string name="three_m">3 months</string>
    <string name="ever">In perpetuity</string>
    <string name="empty_favorite">While no classified ads. What would make an announcement favorite, click on the symbol of the star in any advertisement.</string>
    <string name="menu">Menu</string>
    <string name="pull_down">Pull to update</string>
    <string name="empty_favorite_title">Favorite list is empty</string>
    <string name="empty_favorite_list">You can save any ads to your favorites by clicking on the icon with an asterisk in any advertisement.</string>
    <string name="refresh">Refreshing</string>
    <string name="search_hint">What do you want to find?</string>
    <string name="posted">Posted</string>
    <string name="full_name">Full name</string>
    <string name="views">Views</string>
    <string name="show_map">Show Map</string>
    <string name="favorite">Favorite</string>
    <string name="all_ads">All Ads</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="save">Save</string>
    <string name="enter_address">Enter Address</string>
    <string name="get_location">Fill based on current location</string>
    <string name="next">Next</string>
    <string name="front">Next</string>
    <string name="back">Back</string>
    <string name="apply">Ok</string>
    <string name="address_hint">Address</string>
    <string name="no_ads_near">No ads near you</string>
    <string name="contacts_limit">You can have only one type of contact</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign Up</string>
    <string name="actively">Actively</string>
    <string name="not_actively">Disabled</string>
    <string name="edit_ad">Edit</string>
    <string name="edit_ad_title">Editing</string>
    <string name="apply_ad">Apply</string>
    <string name="facebook_app_id" translatable="false">706408652831850</string>
    <string name="call">Call</string>
    <string name="action_websearch">Web Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_global">Search&#8230;</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="empty_search_string">You have not entered a search term</string>
    <string name="forbidden">Can Not be Created</string>
    <string name="checkin">Сheckin</string>
    <string name="menu_settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="signInLabel">Sign in to personalize your experience</string>
    <string name="homeImageText">Show must go on!</string>
    <string name="page_number_1d">Page #%d</string>
    <string name="ok">OK</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="lastAds">Last Ads</string>
    <string name="recommendedAds">ADMIN RECOMMENDS</string>
    <string name="favoriteRates">Like</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="logout_text">Sign Out</string>
    <string name="login_text">Sign In</string>
    <string name="ratingTextView">If you like the app then you appreciate it!</string>
    <string name="report">Report</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="loading">Loading</string>
    <string name="wait_loading">Wait while loading&#8230;</string>
    <string name="menu_home">Home</string>
    <string name="menu_catalog">Categories</string>
    <string name="menu_shares">Shares</string>
    <string name="menu_blacklist">Blocked</string>
    <string name="menu_ads">Ads</string>
    <string name="menu_create_ad">Create</string>
    <string name="menu_my_ads">My</string>
    <string name="menu_last_viewed">Last Viewed</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_other">Other</string>
    <string name="menu_search">Search</string>
    <string name="menu_about_program">License Agreement</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_post">Post</string>
    <string name="fragment_my_ads">My Ads</string>
    <string name="fragment_favorites">Favorites</string>
    <string name="category_tittle">Category</string>
    <string name="register_text">REGISTER</string>
    <string name="forget_password_text">Forgot password?</string>
    <string name="auto_error">You email and/or password is not correct</string>
    <string name="submit_registration_text">Submit registration</string>
    <string name="my_ads">My Ads List</string>
    <string name="system_lang">Language Setup</string>
    <string name="my_blacklist">Blocked List</string>
    <string name="favourites_list">Favorites List</string>
    <string name="settings_title">Settings</string>
    <string name="block_button">Block</string>
    <string name="unblock_button">Unblock</string>
    <string name="choose_category_button">Choose Category</string>
    <string name="title_hint">Title of ad</string>
    <string name="symbols_left">%d characters left</string>
    <string name="description_hint">Announcement text</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="cost_hint">Cost</string>
    <string name="location_hint">Location</string>
    <string name="currency_hint">Currency</string>
    <string name="create_ad_button">Create Ad</string>
    <string name="add_pictures_button">Add Photo</string>
    <string name="ready">Ready</string>
    <string name="add_photos_text">Photos will draw more attention to your ad</string>
    <string name="validity">Validity of announcement</string>
    <string name="add_phone">Add phone</string>
    <string name="person">Individual</string>
    <string name="organization">Organization</string>
    <string name="id">ID: </string>
    <string name="user_type">User Type</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="vk_add" translatable="false">vk.com</string>
    <string name="fb_add" translatable="false">facebook.com</string>
    <string name="email_add">E-mail</string>
    <string name="phone_add">Phone</string>
    <string name="website_add">Website</string>
    <string name="address_add">Address</string>
    <string name="add_button">Add</string>
    <string name="language">Language</string>
    <string name="my_profile_settings">Profile Settings</string>
    <string name="my_profile">Profile</string>
    <string name="support">Support</string>
    <string name="contacts">Contacts</string>
    <string name="question">Ask Question</string>
    <string name="delete">Delete</string>
    <string name="massage">Massage</string>
    <string name="question_desc">Your Question</string>
    <string name="review_desc">Your Wish</string>
    <string name="error_desc">Error Message</string>
    <string name="report_error">Report an Error</string>
    <string name="report_review">Send Wish</string>
    <string name="report_question">Ask Question</string>
    <string name="phone_empty">Phone Number Not Founded</string>
    <string name="email_empty">E-Mail Not Founded</string>
    <string name="no_app_to_send_email">There are no email clients installed</string>
    <string name="enter_phone_hint">Phone number without country code</string>
    <string name="empty_desc">Empty Description</string>
    <string name="empty_address">Enter you address</string>
    <string name="empty_cost">Empty Cost</string>
    <string name="empty_title">Empty Title</string>
    <string name="empty_category">Empty Category</string>
    <string name="alert_re_ask_favorite">Are you sure you want to remove this ad from favorites?</string>
    <string name="alert_re_ask_your">Are you sure you want to remove your ad?</string>
    <string name="report_to_ad">Complain</string>
    <string name="report_to_ad_title">Your Complain</string>
    <string name="all_ads_category">All Ads</string>
    <string name="all_category">All</string>
    <string name="sell_now">Start selling now!</string>
    <string name="sell_now_desc">Sell ​​your unwanted things right now!</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search">Search</string>
    <string name="start_cost_hint">Start Cost</string>
    <string name="end_cost_hint">End Cost</string>
    <string name="text_for_search_hint">Text For Search</string>
    <string name="Country_city">Country, City</string>
    <string name="lic_question">Are You Agree?</string>
    <string name="pictures_quot">You Can Load 4 Pictures Only</string>
    <string name="title_activity_maps">Map</string>
    <string name="contacts_do_not_exist_title">Contact data is not available</string>
    <string name="address_do_not_exist_title">Address data is incorrect</string>
    <string name="address_do_not_exist_text">Please try input data again</string>
    <string name="contacts_do_not_exist_text">In order to create an ad , you need to add a phone number or e-mail</string>
    <string name="contacts_do_not_exist_text_map">To find ads near you must specify your address</string>
    <string name="lic_text">It could be your license agreement</string>
    <string name="support_title">What kind of support do you need ?</string>
    <string-array name="currencyType">
        <item>USD $</item>
        <item>CAD $</item>
        <item>AUD $</item>
        <item>NZD $</item>
        <item>CHF</item>
        <item>₽</item>
        <item>€</item>
        <item>¥</item>
        <item>£</item>

    </string-array>
    <string-array name="paymentType">
        <item>One-time Payment</item>
        <item>Payment Per Hour</item>
        <item>Payment Per Day</item>
        <item>Payment Per Week</item>
        <item>Payment Per Month</item>
        <item>Payment Per Year</item>
    </string-array>
    <string-array name="bargainType">
        <item>&#8230;</item>
        <item>Bargain</item>
        <item>Without Bargaining</item>
    </string-array>
</resources>