<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/account"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/nav_black_list"
        android:icon="@drawable/vector_drawable_ic_featured_play_list_black___px"
        android:title="@string/menu_blacklist" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/vector_drawable_ic_history_black___px"
        android:title="@string/menu_last_viewed" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/vector_drawable_ic_supervisor_account_black___px"
        android:title="@string/support" />


    <item
        android:id="@+id/nav_license"
        android:icon="@drawable/vector_drawable_ic_check_circle_black___px"
        android:title="@string/menu_about_program" />


    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/logout_text" />
</menu>
