<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ctrl_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:gravity="center"
                android:text="@string/address_add"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ready"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/ready"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="18sp" />


        </LinearLayout>

        <EditText
            android:id="@+id/address_line"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_address"
            android:inputType="textCapSentences"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressSearch"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/get_from_gps"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="30dp"
                android:background="@color/mainColor"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/get_location"
                android:textColor="@color/gray"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/get_from_map"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="10dp"
            android:background="@color/mainColor"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/show_map"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>