<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_contacts"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/mainColor"
        android:gravity="center"
        android:text="@string/edit_contacts"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/edit_contacts">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/setAvatar"
                        android:textColor="@color/primaryColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/change_avatar"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/person_type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/organization"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/switch_button"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/organization"
                            android:textColor="@drawable/text_color_selector"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/person"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/switch_button_r"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/person"
                            android:textColor="@drawable/text_color_selector"
                            android:textSize="16sp" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/fName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/bright"
                        android:gravity="center"
                        android:hint="@string/first_name"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/mName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/bright"
                        android:gravity="center"
                        android:hint="@string/middle_name"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/lName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/bright"
                        android:gravity="center"
                        android:hint="@string/last_name"
                        android:padding="10dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/add_contact"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_contact"
                android:textColor="@color/primaryColor"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contacts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>