<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dededede" />

            <RelativeLayout
                android:id="@+id/choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/category_tittle"
                    android:singleLine="true"
                    android:textColor="@color/mainColor"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/clearCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:visibility="invisible" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dededede" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/author"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/person_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/individual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/person"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/organization"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button_m"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/organization"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/any"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button_r"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/any"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/textForSearch"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:background="@color/bright"
                android:gravity="top"
                android:hint="@string/search_hint"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/where_to_search"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/where_to_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/in_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/in_title"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/everywhere"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button_m"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/everywhere"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/in_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_button_r"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/in_description"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="16sp" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dededede" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/cost"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/startCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_cost_hint"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/mainColor"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/endCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_cost_hint"
                    android:inputType="number"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/searchParams"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:textSize="18sp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/clear_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:src="@drawable/places_ic_clear" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@drawable/places_ic_search" />
</RelativeLayout>